# calculator-qml

./: .gitignore  CMakeLists.txt  Calculator.qml  README.md  SecretMenu.qml  calculator.qrc  main.cpp  main.qml
.github/workflows/: build.yml
components/: KeypadButton.qml  LongPressButton.qml
